--- a/framework-design/test-output/old/Suite/classes.html
+++ b/framework-design/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>org.frameworkdesign.MainAutomationArea</td>
+<td>org.frameworkdesign.DriverScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
