--- a/framework-design/test-output/old/Suite/methods.html
+++ b/framework-design/test-output/old/Suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="82f6ef">  <td>17/07/06 23:13:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MainAutomationArea.storeURLValue(java.lang.String)[pri:0, instance:org.frameworkdesign.MainAutomationArea@6eebc39e]">&gt;&gt;storeURLValue</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@343965883</td>   <td></td> </tr>
-<tr bgcolor="82f6ef">  <td>17/07/06 23:13:39</td>   <td>772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MainAutomationArea.mainArea()[pri:0, instance:org.frameworkdesign.MainAutomationArea@6eebc39e]">mainArea</td> 
-  <td>main@343965883</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>17/08/13 12:17:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DriverScript.storeURLValue(java.lang.String)[pri:0, instance:org.frameworkdesign.DriverScript@239963d8]">&gt;&gt;storeURLValue</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@504527234</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>17/08/13 12:17:30</td>   <td>689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.mainArea()[pri:0, instance:org.frameworkdesign.DriverScript@239963d8]">mainArea</td> 
+  <td>main@504527234</td>   <td></td> </tr>
 </table>
