Made several changes to the repository. 1. Introduced block files- Block files consist of self-contained blocks of keywords that can be reused 2. Developed keyword for improved wait times using fluent wait 3. Removed unnecessary files. 4. Included sample reports

--- a/framework-design/test-output/index.html
+++ b/framework-design/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\Karthik\git\WarhamsterTestAutomationFramework\framework-design\testng.xml</span>
+                    <span>E:\Programming\WarhamsterFramework\WarhamsterTestAutomationFramework\framework-design\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Karthik\git\WarhamsterTestAutomationFramework\framework-design\testng.xml</span>
+            <span class="header-content">E:\Programming\WarhamsterFramework\WarhamsterTestAutomationFramework\framework-design\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -189,12 +189,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'mainArea')
 data.setCell(0, 2, 'org.frameworkdesign.DriverScript')
-data.setCell(0, 3, 53011);
+data.setCell(0, 3, 23017);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 53 seconds</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -227,7 +227,7 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">mainArea</span>
-                <span class="method-start">1415 ms</span>
+                <span class="method-start">647 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
